Removed Bug with updating Stats, Removed Bug with naming, Added Translation,  Added Thinking_Effect for KI &  Humans , Bug with KI removed
Removed Bug with updating Stats, Removed Bug with naming if choosed "No"-Game against CPU, Added Translation in "Play against" Dropdown, Thinking_Effect for KI, Thinking Effect for Humans, Bug removed about trigger false KI_Level to Game Object,

--- a/Folder_CSS/style.css
+++ b/Folder_CSS/style.css
@@ -218,6 +218,10 @@ line-height: 0;
     justify-content: center;
     align-content: center;
 }
+.Class_Thinking{
+    text-align: center;
+    font-size: 3rem;
+}
 
 .Class_Left_Pos{
     position: absolute;
