Added new CSS-Stylesheet Layout, Added Animation and notification for name saving

--- a/Folder_CSS/style.css
+++ b/Folder_CSS/style.css
@@ -38,7 +38,9 @@
                     |                                                                         |
                     |_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ __ _ _ _ _ _ _ _ _ _ |
 
-                                                                                                                                                                                                                                                                        /*
+                                                                                                                                                                                                                                                                               */
+/* #region General */                                                                                                                                                                                                                                                                               
+                                                                                                                                                                                                                                                                               /*
 ================================================================================================================================================================================================================================================================================
                                  
                                                     General       
@@ -79,6 +81,9 @@ word-wrap: break-word;
 
 @import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap');
 
+/* #endregion */  
+
+/* #region Layout */  
                                                                                                                                                                                                                                                                                /*
 ================================================================================================================================================================================================================================================================================
                                  
@@ -123,6 +128,11 @@ header{
     margin-bottom: 30vh;
     border-top:  solid 1px var(--prime-border);
     border-bottom:  solid 1px var(--prime-border);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    text-align: center;
+    
 }
 
 .Class_GameboardWrapper{
@@ -143,6 +153,10 @@ header{
     margin-bottom: 30vh;
     border-top:  solid 1px var(--prime-border);
     border-bottom:  solid 1px var(--prime-border);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 footer{
@@ -161,8 +175,10 @@ line-height: 0;
     top: -1rem;
 }
 
+/* #endregion */  
 
-/*
+/* #region Gameboard */  
+                                                                                                                                                                                                                                                                            /*
 ================================================================================================================================================================================================================================================================================
                                  
                                                         Gameboard     
@@ -232,12 +248,23 @@ line-height: 0;
     position: absolute;
     right: 3%;
 }
+/* #endregion */
+
+/* #region Typographie */    
                                                                                                                                                                                                                                                                                 /*
 ================================================================================================================================================================================================================================================================================
                                  
                                                        Typographie        
 
 ===============================================================================================================================================================================================================================================================================*/
+
+#ID_Player_1_Headline{
+    width: 100%
+}
+#ID_Player_2_Headline{
+    width: 100%
+}
+
 /*  Settings menu     */ 
 
 .Class_Settings_Menu{
@@ -324,6 +351,9 @@ line-height: 0;
     border: dashed .3rem var(--main-white);
     padding: 1rem;
 }
+/* #endregion */  
+
+/* #region Buttons, Inputs... */  
                                                                                                                                                                                                                                                                               /*
 ================================================================================================================================================================================================================================================================================
                                  
@@ -360,6 +390,16 @@ select{
     margin-right: 1rem;
     margin-bottom: 5vh;
     filter: invert(1);
+}
+
+.Class_LeftNot{
+    position: absolute;
+    top: 5rem;
+}
+
+.Class_RightNot{
+    position: absolute;
+    top: 5rem;
 }
 
 .Class_Naming_Span{
@@ -429,11 +469,9 @@ select{
   .Class_Colour_Toggle  input:checked + .Class_Colour_Slider:before {
     transform: translateX(1.9em);
   }
-  
+/* #endregion */
 
-  
- 
-
+/* #region Animations & Transitions */    
                                                                                                                                                                                                                                                                               /*
 ================================================================================================================================================================================================================================================================================
                                  
@@ -724,7 +762,9 @@ select{
         transform: rotate(0deg); 
     }
 }
+/* #endregion */  
 
+/* #region Game End Screen */  
                                                                                                                                                                                                                                                                                /*
 ================================================================================================================================================================================================================================================================================
                                  
@@ -840,9 +880,9 @@ select{
     align-content: flex-end;
     text-align: center;
 }
+/* #endregion */  
 
-
-       
+/* #region Helpers */  
                                                                                                                                                                                                                                                                               /*
 ================================================================================================================================================================================================================================================================================
                                  
@@ -853,6 +893,38 @@ select{
 .Class_Invisible{
     visibility: hidden;
 }
+
+.Class_Smooth_In{
+animation: SmoothInAnimation 1s ease-in;
+animation-fill-mode: forwards;
+animation-iteration-count: 1
+}
+@keyframes SmoothInAnimation {
+    from{
+        transform: scale(0);
+    }
+    to{
+        transform: scale(1);
+    }
+}
+
+.Class_Smooth_Out{
+    animation: SmoothOutAnimation 1s ease-in;
+animation-fill-mode: forwards;
+animation-iteration-count: 1
+}
+@keyframes SmoothOutAnimation {
+    from{
+        transform: scale(1);
+    }
+    to{
+        transform: scale(0);
+    }
+}
+
+/* #endregion */ 
+
+/* #region Media Queries */  
                                                                                                                                                                                                                                                                               /*
 ================================================================================================================================================================================================================================================================================
                                  
@@ -992,8 +1064,10 @@ select{
     align-items: flex-end;
 }
 
-
 }
+/* #endregion */  
+
+/* #region Final Informations & Comments */  
                                                                                                                                                                                                                                                                               /*
 ================================================================================================================================================================================================================================================================================
                                  
@@ -1001,6 +1075,11 @@ select{
 
 ===============================================================================================================================================================================================================================================================================
 
+                                                                                                                                                                                                                                                                              */
+/* #endregion */ 
+
+/* #region Credits */ 
+                                                                                                                                                                                                                                                                              /*
 
                 ######################################################################################################################
                 #                                                                                                                    #
@@ -1015,4 +1094,5 @@ select{
                 #                                      CSS - what a wonderful language.                                              #
                 #                                                                                                                    #
                 #                                                                                                                    #
-                ######################################################################################################################                                                                                                                                                               */
+                ######################################################################################################################                                                                                                                                            */
+/* #endregion */  
