Script Layout equalization

--- a/Folder_CSS/style.css
+++ b/Folder_CSS/style.css
@@ -1,42 +1,42 @@
                                                                                                                                                                                                                                                                                 /*    
-                                    Online-Four-Wins Main-CSS-Stylsheet
-                                                 powered by
+                                          Four-Wins-Online Main-CSS-Stylsheet
+                                                      powered by
 
-                                               Stefan Bartl
-                                         (WKDSteVIE / WKDMinerva)
+                                                     Stefan Bartl
+                                               (WKDSteVIE / WKDMinerva)
 
-                                                    2021
-                     ____________________________________________________________________                                                                                                                                                                                                                                                    
-                    {                 ____________________________________               }                                                                                                                                                                                  
-                    {                           Table of content                         }
-                    {____________________________________________________________________}                                                       
-                    |                                                                    |
-                    |                      1) General                                    |
-                    |                                                                    |
-                    |                      2) Layout                                     |
-                    |                                                                    |
-                    |                      3) Gameboard                                  |
-                    |                                                                    |
-                    |                      4) Settings Menu                              |                                               
-                    |                                                                    |
-                    |                      5) Typography                                 |
-                    |                                                                    |
-                    |                      6) Buttons, Inputs, etc...                    |
-                    |                                                                    |
-                    |                      7) Animations & Transitions                   |
-                    |                                                                    |
-                    |                      8) Animations                                 |
-                    |                                                                    |
-                    |                      9) Game End Screen                            |
-                    |                                                                    |
-                    |                      10) Helpers                                   |
-                    |                                                                    |
-                    |                      11) Media Queries                             |
-                    |                                                                    |
-                    |                      12) Final Information & Comments              |
-                    |                                                                    |
-                    |                      13) Credits                                   |
-                    |_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ __ _ _ _ _ _ _ _|
+                                                        2021
+                             ________________________________________________________________                                                                                                                                                                                                                                                    
+                            {             ____________________________________               }                                                                                                                                                                                  
+                            {                       Table of content                         }
+                            {________________________________________________________________}                                                       
+                            |                                                                |
+                            |                  1) General                                    |
+                            |                                                                |
+                            |                  2) Layout                                     |
+                            |                                                                |
+                            |                  3) Gameboard                                  |
+                            |                                                                |
+                            |                  4) Settings Menu                              |                                               
+                            |                                                                |
+                            |                  5) Typography                                 |
+                            |                                                                |
+                            |                  6) Buttons, Inputs, etc...                    |
+                            |                                                                |
+                            |                  7) Animations & Transitions                   |
+                            |                                                                |
+                            |                  8) Animations                                 |
+                            |                                                                |
+                            |                  9) Game End Screen                            |
+                            |                                                                |
+                            |                  10) Helpers                                   |
+                            |                                                                |
+                            |                  11) Media Queries                             |
+                            |                                                                |
+                            |                  12) Final Information & Comments              |
+                            |                                                                |
+                            |                  13) Credits                                   |
+                            |_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ __ _ _ _ _ _ _ _|
 
                                                                                                                                                                                                                                                                                */
 
