--- a/Folder_CSS/style.css
+++ b/Folder_CSS/style.css
@@ -45,6 +45,8 @@
                                                     Jobs To-do:
 
                                         -) Win div mit Ellypse positon absolute über win row
+                                        -) Better Styling (find a real good one)
+                                        -) CSS-Code minimizing 
                                         -) INGAME Section?
                                         -) Styling 
                                         -) Start screen playing animation
@@ -1114,6 +1116,72 @@ to{
 }
 }
 
+                              /*    Windows    */
+
+.Class_Window{
+   min-height: 40vh;
+   width: 50%;
+   position: absolute;
+   top: 10%;
+   left: 25%;
+   display: grid;
+   grid: 1rem auto / 1fr;
+   justify-items:center;
+   text-align: center;
+   background-color: grey;
+   border: solid 1px black;
+   }
+
+.Class_Window_Notification{
+   line-height: 0;
+   min-width: 100%;
+   font-size:x-small;
+   color: white;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+
+.Class_Inner_Window{
+   width:  calc(100% - 2rem);
+   height: calc(100% - 1rem);
+   overflow:scroll;
+   display: grid;
+   grid: 2rem auto 5rem / 1fr;
+   grid-auto-rows:max-content ;
+   justify-items: center;
+   align-items: center;
+   background-color: white;
+   color: black;
+   border: solid 1px black;
+}
+
+.Class_Inner_Window h3{
+   
+}
+
+.Class_Inner_Window p {
+   align-self: center;
+}
+
+.Class_Inner_Window input{
+   height: 2rem;
+   width: 60%;
+   background-color: darkgray;
+   text-align: center;
+   border: solid 1px black;
+}
+
+.Class_Buttons_Div {
+   display: flex;
+   gap: 1rem;
+   height: 2rem;
+}
+
+.Class_Inner_Window button{
+   width: 5rem;
+   border: solid 1px black;
+}
 /* #endregion */ 
 
 /* #region Media Queries */  
